fix text align test for navbar and fixed title margin

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -24,11 +24,12 @@
   &::after {
     @extend .link-after;
     width: 100% !important;
+    text-align: right;
   }
 }
 
 .navbar-brand {
-  margin-bottom: -14px;
+  margin-bottom: -3px;
   &::after {
     margin-top: -0.25em;
   }
